Patch layout bug in viewports less than 1200 px

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -215,6 +215,7 @@ label {
   background-image: image-url('SCP-Header-resize.png');
   background-repeat: no-repeat;
   background-position: right bottom;
+  min-width: 1200px;
 }
 
 #main-banner h1 sup small {
